[tool.poetry]
name = "matti"
version = "0.1.0"
description = "matching file"
authors = ["hinata"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "*"
pyexiv2 = "*"
pyperclip = "*"
recurser = {git = "https://git@github.com/h1n474/recurser.git"}
rich = "*"

[tool.poetry.scripts]
matti = 'matti.core:cli' 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"